# CPA-Cockpit-Tools

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
frontend/: index.html
frontend/src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  token_tool.rs
