[package]
name = "token-tool"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
futures = "0.3"
chrono = "0.4"
walkdir = "2"
regex = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
